# game

./: CMakeLists.txt  main.cpp
include/: board.h  circle.h
src/: glad.c  main.cpp
